[gd_scene load_steps=3 format=2]

[ext_resource path="res://entities/ship_ufo.gd" type="Script" id=1]

[sub_resource type="CircleShape2D" id=1]
radius = 320.0

[node name="UFO" type="RigidBody2D" groups=["enemy"]]
mode = 2
mass = 100.0
script = ExtResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
rect = Rect2( -8, -8, 8, 8 )

[node name="PlayerSensor" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerSensor"]
shape = SubResource( 1 )

[node name="Shapes" type="Node2D" parent="."]

[node name="Body" type="Polygon2D" parent="Shapes"]
color = Color( 0.580392, 0.129412, 0.415686, 1 )
polygon = PoolVector2Array( -16, -56, 16, -56, 32, -32, 56, -16, 56, 16, 32, 32, 16, 56, -16, 56, -32, 32, -56, 16, -56, -16, -32, -32 )

[node name="Polygon2D" type="Polygon2D" parent="Shapes"]
color = Color( 0.262745, 0, 0.403922, 1 )
polygon = PoolVector2Array( 8, -48, 24, -48, 40, -40, 48, -24, 48, -8, 8, -8 )

[node name="Polygon2D9" type="Polygon2D" parent="Shapes/Polygon2D"]
color = Color( 1, 0.945098, 0.909804, 1 )
polygon = PoolVector2Array( 24, -32, 16, -24, 24, -16, 32, -24 )

[node name="Polygon2D2" type="Polygon2D" parent="Shapes"]
color = Color( 0.262745, 0, 0.403922, 1 )
polygon = PoolVector2Array( -8, -48, -24, -48, -40, -40, -48, -24, -48, -8, -8, -8 )

[node name="Polygon2D8" type="Polygon2D" parent="Shapes/Polygon2D2"]
color = Color( 1, 0.945098, 0.909804, 1 )
polygon = PoolVector2Array( -24, -32, -32, -24, -24, -16, -16, -24 )

[node name="Polygon2D4" type="Polygon2D" parent="Shapes"]
color = Color( 0.262745, 0, 0.403922, 1 )
polygon = PoolVector2Array( -8, 8, -48, 8, -48, 24, -40, 40, -24, 48, -8, 48 )

[node name="Polygon2D7" type="Polygon2D" parent="Shapes/Polygon2D4"]
color = Color( 1, 0.945098, 0.909804, 1 )
polygon = PoolVector2Array( -24, 16, -32, 24, -24, 32, -16, 24 )

[node name="Polygon2D5" type="Polygon2D" parent="Shapes"]
color = Color( 0.262745, 0, 0.403922, 1 )
polygon = PoolVector2Array( 8, 8, 8, 48, 24, 48, 40, 40, 48, 24, 48, 8 )

[node name="Polygon2D6" type="Polygon2D" parent="Shapes/Polygon2D5"]
color = Color( 1, 0.945098, 0.909804, 1 )
polygon = PoolVector2Array( 24, 16, 16, 24, 24, 32, 32, 24 )

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="."]
visible = false
polygon = PoolVector2Array( -16, -56, 16, -56, 40, -40, 56, -16, 56, 16, 40, 40, 16, 56, -16, 56, -40, 40, -56, 16, -56, -16, -40, -40 )

[node name="ShootTimer" type="Timer" parent="."]
process_mode = 0
one_shot = true

[node name="ProjectileContainer" type="Node" parent="."]

[node name="BouncingBulletTimer" type="Timer" parent="."]
process_mode = 0
wait_time = 5.0
one_shot = true

[connection signal="body_entered" from="PlayerSensor" to="." method="_on_PlayerSensor_body_entered"]
[connection signal="timeout" from="BouncingBulletTimer" to="." method="_on_BouncingBulletTimer_timeout"]
